adding editing functionality / changing default font size

--- a/timer.html
+++ b/timer.html
@@ -17,7 +17,8 @@ $(document).ready(function () {
 		INITIAL_COLOUR: '#ffffff',
 		GREEN_COLOUR: '#00ff00',
 		YELLOW_COLOUR: '#ffff00',
-		RED_COLOUR: '#ff0000'
+		RED_COLOUR: '#ff0000',
+		FONT_SIZE: 300
 	});
 });
 </script>
@@ -32,13 +33,16 @@ $(document).ready(function () {
 			<th></th>
 			<th>Name</th>
 			<th>Role</th>
-			<th>Green</th>
-			<th>Yellow</th>
-			<th>Red</th>
+			<th>Grn</th>
+			<th>Yllw</th>
+			<th>Rd</th>
 			<th>Time</th>
 		</tr></thead><tbody></tbody></table>
 		<a id='add'>Add</a>
 		<a id='save'>Save</a>
+		<a id='moveUp'>Move Up</a>
+		<a id='moveDown'>Move Down</a>
+		<a id='remove'>Remove</a>
 	</div>
 </body>
 </html>
