refacter click function / added small time

--- a/timer.html
+++ b/timer.html
@@ -24,10 +24,10 @@ $(document).ready(function () {
 </script>
 </head>
 <body>
-	<div id='time'>00:00</div>
+	<div id='time' class='time'>00:00</div>
 	<div id='sidebar'>
-		<a id='toggle'>+</a>
-		<div id='summary'>
+		<a id='toggle' class='always'>+</a>
+		<div id='summary' class='always'>
 		</div>
 		<table><thead><tr>
 			<th></th>
