--- a/timer.html
+++ b/timer.html
@@ -2,6 +2,7 @@
 <head>
 <script src="jquery.min.js"></script>
 <script src="script.js"></script>
+<script src="data.json"></script>
 <link type="text/css" rel="stylesheet" href="style.css"></link>
 <script>
 $(document).ready(function () {
@@ -27,6 +28,7 @@ $(document).ready(function () {
 	<div id='time' class='time'>00:00</div>
 	<div id='sidebar'>
 		<a id='toggle' class='always'>+</a>
+		<div id='smalltime' class='time always'></div>
 		<div id='summary' class='always'>
 		</div>
 		<table><thead><tr>
